hide overflowing fix files.

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -17,6 +17,7 @@
 .file-row {
   text-align: center;
   overflow-y: hidden;
+  overflow-x: hidden;
   height: 140px;
 }
 
